# new-eden-analytics

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  PLAN.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: CLAUDE.md  Cargo.toml
backend/crates/nea-analysis/: CLAUDE.md  Cargo.toml
backend/crates/nea-analysis/src/: lib.rs  runner.rs
backend/crates/nea-db/: CLAUDE.md  Cargo.toml
backend/crates/nea-db/migrations/: 001_sde_tables.sql  002_market_tables.sql  003_kill_tables.sql  004_analysis_tables.sql  005_user_tables.sql  006_retention_policies.sql  007_pilot_profiles.sql  008_backfill_unique_indexes.sql  009_missing_indexes.sql  010_session_retention.sql  011_doctrine_tables.sql  012_killmail_list_indexes.sql  013_non_tradable_types.sql  014_attackers_compression.sql  015_drop_duplicate_index.sql  016_fix_compression_segmentby.sql  017_profile_solo_kill_indexes.sql  018_killmail_items_lookup_optimizations.sql  019_recompress_and_cleanup.sql  020_pg_stat_statements.sql
backend/crates/nea-db/src/: error.rs  lib.rs  models.rs  pool.rs  queries.rs
backend/crates/nea-esi/: CLAUDE.md  Cargo.toml
backend/crates/nea-esi/src/: lib.rs
backend/crates/nea-server/: CLAUDE.md  Cargo.toml
backend/crates/nea-server/src/: error.rs  main.rs  state.rs
backend/crates/nea-server/src/routes/: alliances.rs  analysis.rs  auth.rs  characters.rs  corporations.rs  dashboard.rs  destruction.rs  items.rs  killmails.rs  market.rs  mod.rs
backend/crates/nea-worker/: CLAUDE.md  Cargo.toml
backend/crates/nea-worker/src/: aggregation.rs  analyzer.rs  doctrine_aggregator.rs  fitting_utils.rs  killmail_poller.rs  main.rs  market_history.rs  market_orders.rs  profile_aggregator.rs
backend/crates/nea-zkill/: CLAUDE.md  Cargo.toml
backend/crates/nea-zkill/src/: lib.rs
backend/kill-backfill/: CLAUDE.md  Cargo.toml
backend/kill-backfill/src/: main.rs
backend/market-seed/: CLAUDE.md  Cargo.toml
backend/market-seed/src/: main.rs
backend/sde-import/: CLAUDE.md  Cargo.toml
backend/sde-import/src/: main.rs
backend/tests/integration/: Cargo.toml
backend/tests/integration/src/: lib.rs
backend/tests/integration/tests/: analysis_pipeline.rs  api_endpoints.rs
frontend/: CLAUDE.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/charts/: CorrelationChart.svelte  DestructionChart.svelte  LagTimeline.svelte  PriceImpactChart.svelte
frontend/src/lib/components/: FittingCard.svelte  KillLossTabs.svelte  VariantOverlay.svelte
frontend/src/lib/stores/: auth.ts  search.ts
frontend/src/lib/utils/: formatters.test.ts  formatters.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/alliances/[allianceId]/: +page.svelte
frontend/src/routes/auth/callback/: +page.svelte
frontend/src/routes/characters/[characterId]/: +page.svelte
frontend/src/routes/corporations/[corpId]/: +page.svelte
frontend/src/routes/items/[typeId]/: +page.svelte
frontend/src/routes/killmails/[killmailId]/: +page.svelte
frontend/src/routes/pilots/: +page.svelte
frontend/src/routes/search/: +page.svelte
infra/docker/: Dockerfile.backend  Dockerfile.frontend
