[workspace]
resolver = "2"
members = [
    "crates/nea-server",
    "crates/nea-worker",
    "crates/nea-db",
    "crates/nea-zkill",
    "crates/nea-analysis",
    "sde-import",
    "kill-backfill",
    "market-seed",
    "tests/integration",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Auth
oauth2 = "5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Config
dotenvy = "0.15"

# Numerical / statistical analysis
nalgebra = "0.34"
statrs = "0.18"

# Internal crates
nea-db = { path = "crates/nea-db" }
nea-esi = "0.7.2"
nea-zkill = { path = "crates/nea-zkill" }
nea-server = { path = "crates/nea-server" }
nea-analysis = { path = "crates/nea-analysis" }
