[package]
name = "market-seed"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "market-seed"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
nea-db = { workspace = true }
nea-esi = { workspace = true }
