[package]
name = "nea-analysis"
version = "0.2.0"
edition = "2024"

[dependencies]
nalgebra = { workspace = true }
statrs = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
nea-db = { workspace = true }
