[package]
name = "nea-server"
version = "0.2.0"
edition = "2024"

[lib]
name = "nea_server"
path = "src/lib.rs"

[[bin]]
name = "nea-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
oauth2 = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
nea-db = { workspace = true }
nea-esi = { workspace = true }
nea-analysis = { workspace = true }

[dev-dependencies]
base64 = "0.22"
rsa = "0.9"
