[package]
name = "nea-worker"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "nea-worker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
nea-db = { workspace = true }
nea-esi = { workspace = true }
nea-zkill = { workspace = true }
nea-analysis = { workspace = true }
